Some logging changes. Config update.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 db.host = localhost
 db.user = ncc
-db.password = ncc4096
+db.password = ncc5060
 db.dbname = ncc
 db.port = 3306
 
@@ -8,8 +8,16 @@ radius.authport = 1812
 radius.acctport = 1813
 radius.secret = Ctrhtn
 
-log.level = INFO
+log.level = DEBUG
 log.file = NCC.log
+log.query = false
 
 module.radius = true
-module.dhcp = false
+radius.timer = 15
+radius.log.level = 5
+
+module.dhcp = true
+dhcp.server = 192.168.1.1
+dhcp.timer = 1
+dhcp.unbinded.cleanup.time = 20
+dhcp.log.level = 5
