Optionaly ignore broadcast DHCP requests.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,7 +8,7 @@ radius.authport = 1812
 radius.acctport = 1813
 radius.secret = Ctrhtn
 
-log.level = DEBUG
+log.level = INFO
 log.file = NCC.log
 log.query = false
 
@@ -17,7 +17,9 @@ radius.timer = 15
 radius.log.level = 5
 
 module.dhcp = true
-dhcp.server = 192.168.1.1
+dhcp.server = 93.170.48.8
 dhcp.timer = 1
 dhcp.unbinded.cleanup.time = 20
-dhcp.log.level = 5
+dhcp.log.level = 6
+dhcp.ignore.broadcast = true
+
