--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,7 +8,7 @@ radius.authport = 1812
 radius.acctport = 1813
 radius.secret = Ctrhtn
 
-log.level = INFO
+log.level = DEBUG
 log.file = NCC.log
 log.query = false
 
@@ -17,11 +17,12 @@ radius.timer = 15
 radius.log.level = 5
 
 module.dhcp = true
-dhcp.server = 93.170.48.8
+dhcp.server = 10.10.10.22
 dhcp.timer = 1
 dhcp.unbinded.cleanup.time = 20
-dhcp.log.level = 6
+dhcp.log.level = 7
 dhcp.ignore.broadcast = true
+dhcp.duplucate.reply.to.alternate.port = 43606
 
 module.cli = true
 cli.ssh.port = 3270
