Send duplicating DHCP reply to alternate port for tes purposes.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,7 +8,7 @@ radius.authport = 1812
 radius.acctport = 1813
 radius.secret = Ctrhtn
 
-log.level = DEBUG
+log.level = INFO
 log.file = NCC.log
 log.query = false
 
