Alternate DHCP port removed. Experimental force GC feature.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,6 +4,8 @@ db.password = ncc5060
 db.dbname = ncc
 db.port = 3306
 
+ncc.global.gc_forced = false
+
 radius.authport = 1812
 radius.acctport = 1813
 radius.secret = Ctrhtn
@@ -20,9 +22,8 @@ module.dhcp = true
 dhcp.server = 10.10.10.22
 dhcp.timer = 1
 dhcp.unbinded.cleanup.time = 20
-dhcp.log.level = 7
+dhcp.log.level = 3
 dhcp.ignore.broadcast = true
-dhcp.duplucate.reply.to.alternate.port = 43606
 
 module.cli = true
 cli.ssh.port = 3270
