Added default values to config

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -20,6 +20,7 @@ radius.log.level = 5
 
 module.dhcp = true
 dhcp.server = 10.10.10.22
+dhcp.server.port = 30067
 dhcp.timer = 1
 dhcp.unbinded.cleanup.time = 20
 dhcp.log.level = 6
