Configurable API port. Some new cmds in CLI.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,7 +10,7 @@ radius.authport = 1812
 radius.acctport = 1813
 radius.secret = Ctrhtn
 
-log.level = INFO
+log.level = DEBUG
 log.file = NCC.log
 log.query = false
 
@@ -25,6 +25,9 @@ dhcp.timer = 1
 dhcp.unbinded.cleanup.time = 20
 dhcp.log.level = 6
 dhcp.ignore.broadcast = true
+
+module.api = true
+api.port = 8032
 
 module.cli = true
 cli.ssh.port = 3270
