--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -11,25 +11,35 @@ radius.acctport = 1813
 radius.secret = Ctrhtn
 
 log.level = DEBUG
-log.file = NCC.log
-log.query = false
+log.file = log/ncc.log
+
+sql.logfile = log/sql.log
+sql.log.query = false
 
 module.radius = true
 radius.timer = 15
 radius.log.level = 5
+radius.logfile = log/radius.log
 
 module.dhcp = true
-dhcp.server = 10.10.10.22
+dhcp.server = 172.16.0.1
 dhcp.server.port = 30067
 dhcp.timer = 1
 dhcp.unbinded.cleanup.time = 20
 dhcp.log.level = 6
 dhcp.ignore.broadcast = true
+dhcp.logfile = log/dhcp.log
 
 module.api = true
 api.port = 8032
+api.logfile = log/api.log
 
 module.cli = true
 cli.ssh.port = 3270
+cli.logfile = log/cli.log
+
+module.iptv = true
+iptv.logfile = log/iptv.log
+
 
 
