--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,4 +5,4 @@ log4j.rootLogger = INFO, ConsoleAppender
 log4j.appender.ConsoleAppender = org.apache.log4j.ConsoleAppender
 log4j.appender.ConsoleAppender.encoding = Cp866
 log4j.appender.ConsoleAppender.layout = org.apache.log4j.PatternLayout
-log4j.appender.ConsoleAppender.layout.ConversionPattern = %d{ISO8601} [%-5p][%-16.16t][%32.32c] - %m%n
+log4j.appender.ConsoleAppender.layout.ConversionPattern = %d{ISO8601} [%-5p][%t][%c] - %m%n
