--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile "org.apache.sshd:sshd-core:0.9.0"
     compile "org.eclipse.jetty:jetty-servlets:7.6.0.RC5"
     compile "org.eclipse.jetty.aggregate:jetty-server:7.6.0.RC5"
+    compile "org.snmp4j:snmp4j:2.5.2"
 }
 
 jar {
