--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -14,14 +14,14 @@ log.level = DEBUG
 log.file = log/ncc.log
 
 sql.logfile = log/sql.log
-sql.log.query = false
+sql.log.query = true
 
-module.radius = true
+module.radius = false
 radius.timer = 15
 radius.log.level = 5
 radius.logfile = log/radius.log
 
-module.dhcp = true
+module.dhcp = false
 dhcp.server = 172.16.0.1
 dhcp.server.port = 30067
 dhcp.timer = 1
