Jython for triggers

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile "org.eclipse.jetty:jetty-servlets:7.6.0.RC5"
     compile "org.eclipse.jetty.aggregate:jetty-server:7.6.0.RC5"
     compile "org.snmp4j:snmp4j:2.5.2"
+    compile "jython:jython:2.1"
 }
 
 jar {
